--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="keywords" content="AstrBot Soulter" />
-    <meta name="description" content="AstrBot Dashboard" />
+    <meta name="keywords" content="Nebula IGCrystal AstrBot Soulter" />
+    <meta name="description" content="Nebula Dashboard" />
     <meta name="robots" content="noindex, nofollow" />
     <link
       rel="stylesheet"
